@@ -1,3 +1,7 @@
+2004-01-25  Alvaro del Castillo  <acs@barrapunto.com>
+
+	* src/planner-resource-view.c: Added undo for resource insertion.
+
 2004-01-23  Xavier Ordoquy   <xordoquy@wanadoo.fr>
 
 	* data/images/resources_usage.png:
